--- a/public/work.html
+++ b/public/work.html
@@ -34,6 +34,12 @@
     .footer-logo { font-size: 18px; font-weight: 700; letter-spacing: 2px; margin-bottom: 10px; }
     .footer-info { color: #666; font-size: 14px; }
     .loading { text-align: center; padding: 40px; color: #666; }
+    .mobile-menu-btn { display: none; background: none; border: none; color: #fff; font-size: 24px; cursor: pointer; }
+    @media (max-width: 768px) { 
+      .nav-links { display: none; }
+      .mobile-menu-btn { display: block; }
+      .nav-links.active { display: flex; flex-direction: column; position: absolute; top: 100%; left: 0; right: 0; background: #141414; padding: 20px; gap: 15px; border-bottom: 1px solid #2a2a2a; }
+    }
   </style>
 </head>
 <body>
@@ -41,6 +47,7 @@
     <div class="container">
       <nav>
         <a href="/" class="logo">Astatica</a>
+        <button class="mobile-menu-btn" onclick="document.querySelector('.nav-links').classList.toggle('active')">☰</button>
         <ul class="nav-links">
           <li><a href="/">Home</a></li>
           <li><a href="/works">Works</a></li>
