--- a/public/works.html
+++ b/public/works.html
@@ -71,7 +71,7 @@
     .credit-row input { flex: 1; padding: 10px; background: #141414; border: 1px solid #2a2a2a; color: #fff; border-radius: 4px; }
     .add-credit-btn { background: transparent; border: 1px dashed #2a2a2a; color: #888; padding: 10px; width: 100%; cursor: pointer; }
     .loading { text-align: center; padding: 40px; color: #666; }
-    @media (max-width: 768px) { .hero h1 { font-size: 32px; } .nav-links { display: none; } }
+    @media (max-width: 768px) { .hero h1 { font-size: 32px; } .nav-links { display: none; } .mobile-menu-btn { display: block; } .nav-links.active { display: flex; flex-direction: column; position: absolute; top: 100%; left: 0; right: 0; background: #141414; padding: 20px; gap: 15px; border-bottom: 1px solid #2a2a2a; } .mobile-menu-btn { background: none; border: none; color: #fff; font-size: 24px; cursor: pointer; display: none; } }
   </style>
 </head>
 <body>
@@ -79,6 +79,7 @@
     <div class="container">
       <nav>
         <a href="/" class="logo">Astatica</a>
+        <button class="mobile-menu-btn" onclick="document.querySelector('.nav-links').classList.toggle('active')">☰</button>
         <ul class="nav-links">
           <li><a href="/">Home</a></li>
           <li><a href="/works" class="active">Works</a></li>
