--- a/public/index.html
+++ b/public/index.html
@@ -1,73 +1,187 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Astatica - Creative Studio</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; background: #0a0a0a; color: #fff; line-height: 1.6; }
-    a { color: inherit; text-decoration: none; }
-    .container { max-width: 1400px; margin: 0 auto; padding: 0 20px; }
-    
-    header { background: #141414; padding: 20px 0; border-bottom: 1px solid #2a2a2a; position: sticky; top: 0; z-index: 100; }
-    nav { display: flex; justify-content: space-between; align-items: center; }
-    .logo { font-size: 24px; font-weight: 700; letter-spacing: 2px; text-transform: uppercase; }
-    .nav-links { display: flex; gap: 30px; list-style: none; }
-    .nav-links a { color: #888; font-size: 14px; transition: color 0.3s; }
-    .nav-links a:hover, .nav-links a.active { color: #fff; }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Astatica - Creative Studio</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: Arial, sans-serif;
+        background: #0a0a0a;
+        color: #fff;
+        line-height: 1.6;
+      }
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
+      .container {
+        max-width: 1400px;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
 
-    .hero { background: #141414; padding: 120px 20px; text-align: center; border-bottom: 1px solid #2a2a2a; }
-    .hero h1 { font-size: 64px; font-weight: 300; letter-spacing: 6px; margin-bottom: 20px; }
-    .hero p { color: #888; font-size: 18px; max-width: 600px; margin: 0 auto; }
+      header {
+        background: #141414;
+        padding: 20px 0;
+        border-bottom: 1px solid #2a2a2a;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+      }
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .logo {
+        font-size: 24px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+      }
+      .nav-links {
+        display: flex;
+        gap: 30px;
+        list-style: none;
+      }
+      .nav-links a {
+        color: #888;
+        font-size: 14px;
+        transition: color 0.3s;
+      }
+      .nav-links a:hover,
+      .nav-links a.active {
+        color: #fff;
+      }
 
-    .about { padding: 80px 20px; text-align: center; max-width: 800px; margin: 0 auto; }
-    .about h2 { font-size: 32px; font-weight: 300; margin-bottom: 20px; }
-    .about p { color: #888; line-height: 1.8; }
+      .hero {
+        background: #141414;
+        padding: 120px 20px;
+        text-align: center;
+        border-bottom: 1px solid #2a2a2a;
+      }
+      .hero h1 {
+        font-size: 64px;
+        font-weight: 300;
+        letter-spacing: 6px;
+        margin-bottom: 20px;
+      }
+      .hero p {
+        color: #888;
+        font-size: 18px;
+        max-width: 600px;
+        margin: 0 auto;
+      }
 
-    footer { background: #141414; padding: 40px 0; text-align: center; margin-top: 60px; border-top: 1px solid #2a2a2a; }
-    .footer-logo { font-size: 18px; font-weight: 700; letter-spacing: 2px; margin-bottom: 10px; }
-    .footer-info { color: #666; font-size: 14px; }
+      .about {
+        padding: 80px 20px;
+        text-align: center;
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      .about h2 {
+        font-size: 32px;
+        font-weight: 300;
+        margin-bottom: 20px;
+      }
+      .about p {
+        color: #888;
+        line-height: 1.8;
+      }
 
-    @media (max-width: 768px) { 
-      .hero h1 { font-size: 36px; } 
-      .nav-links { display: none; }
-      .mobile-menu-btn { display: block; }
-      .nav-links.active { display: flex; flex-direction: column; position: absolute; top: 100%; left: 0; right: 0; background: #141414; padding: 20px; gap: 15px; border-bottom: 1px solid #2a2a2a; }
-      .mobile-menu-btn { background: none; border: none; color: #fff; font-size: 24px; cursor: pointer; display: none; }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="container">
-      <nav>
-        <a href="/" class="logo">Astatica</a>
-        <button class="mobile-menu-btn" onclick="document.querySelector('.nav-links').classList.toggle('active')">☰</button>
-        <ul class="nav-links">
-          <li><a href="/" class="active">Home</a></li>
-          <li><a href="/works">Works</a></li>
-          <li><a href="/admin">Admin</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+      footer {
+        background: #141414;
+        padding: 40px 0;
+        text-align: center;
+        margin-top: 60px;
+        border-top: 1px solid #2a2a2a;
+      }
+      .footer-logo {
+        font-size: 18px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+      }
+      .footer-info {
+        color: #666;
+        font-size: 14px;
+      }
 
-  <section class="hero">
-    <h1>ASTATICA</h1>
-    <p>Creative Studio - We create stunning visual experiences across multiple disciplines.</p>
-  </section>
+      @media (max-width: 768px) {
+        .hero h1 {
+          font-size: 36px;
+        }
+        .nav-links {
+          display: none;
+        }
+        .mobile-menu-btn {
+          display: block;
+        }
+        .nav-links.active {
+          display: flex;
+          flex-direction: column;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          right: 0;
+          background: #141414;
+          padding: 20px;
+          gap: 15px;
+          border-bottom: 1px solid #2a2a2a;
+        }
+        .mobile-menu-btn {
+          background: none;
+          border: none;
+          color: #fff;
+          font-size: 24px;
+          cursor: pointer;
+          display: none;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <nav>
+          <a href="/" class="logo">Astatica</a>
+          <ul class="nav-links">
+            <li><a href="/" class="active">Home</a></li>
+            <li><a href="/works">Works</a></li>
+            <li><a href="/admin">Admin</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <section class="about">
-    <h2>About Us</h2>
-    <p>We are a design-driven company where we approach our clients' requirements with various solutions and techniques to alleviate and realise their brands and products to the next level.</p>
-  </section>
+    <section class="hero">
+      <h1>ASTATICA</h1>
+      <p>
+        Creative Studio - We create stunning visual experiences across multiple
+        disciplines.
+      </p>
+    </section>
 
-  <footer>
-    <div class="container">
-      <div class="footer-logo">Astatica</div>
-      <div class="footer-info">Creative Studio - Brussels, Belgium</div>
-    </div>
-  </footer>
-</body>
+    <section class="about">
+      <h2>About Us</h2>
+      <p>
+        We are a design-driven company where we approach our clients'
+        requirements with various solutions and techniques to alleviate and
+        realise their brands and products to the next level.
+      </p>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="footer-logo">Astatica</div>
+        <div class="footer-info">Creative Studio - Brussels, Belgium</div>
+      </div>
+    </footer>
+  </body>
 </html>
